// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens 1`] = `
<div>
  <button
    aria-controls="menu--3"
    aria-haspopup="true"
    data-reach-menu-button=""
    id="menu-button--menu--3"
    type="button"
  >
    Open me
  </button>
</div>
`;

exports[`opens 2`] = `
<div>
  <button
    aria-controls="menu--3"
    aria-expanded="true"
    aria-haspopup="true"
    data-reach-menu-button=""
    id="menu-button--menu--3"
    type="button"
  >
    Open me
  </button>
</div>
`;

exports[`renders 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    data-reach-menu-button=""
    id="menu-button--menu"
    type="button"
    variant="outline"
  >
    Hello
  </button>
</div>
`;
